--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto3_Leng.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jpl.jar=C:\\Program Files\\swipl\\lib\\jpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jpl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
