--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /nbproject/private/
 /build/
 /dist/
+/clase15_Leng/nbproject/private/
+/eliminable/nbproject/private/
+/clase15_Leng/build/
+/clase15_Leng/dist/
